--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container" style="margin:50px auto;"><hr><br>
         <div class="row">
           <div class="col-md-6">
-            <a href="https://github.com/royalsclinic/royalsclinic-v1.2-free-" target="_blank" class="btn btn-success" style="border-radius:10px;padding:20px 30px;font-size:25px;" download>Download Version 1.2 (Free)</a>
+            <a href="https://github.com/royalsclinic/royalsclinic-v1.2-free-" target="_blank" class="btn btn-success" style="border-radius:10px;padding:20px 30px;font-size:25px;">Download Version 1.2 (Free)</a>
           </div>
           <div class="col-md-6">
             <a href="http://royalsdeck.com/" target="_blank" class="btn btn-info" style="border-radius:10px;padding:20px 30px;font-size:25px;">More Products / Company Website</a>
